Image to base64 converter fix